// Autogenerated with StateSmith 0.22.2+0c32be37bf4d4fee5499780a5ef37a7996c192f9.
// Algorithm: Balanced2. See https://github.com/StateSmith/StateSmith/wiki/Algorithms

#nullable enable

namespace FinancialTracker.StateMachines;

// Generated state machine
public partial class SyncServer
{
    public enum EventId
    {
        CONNECTIONCANCELED = 0,
        CONNECTIONFAILED = 1,
        CONNECTIONSUCCEEDED = 2,
        CONNECTREQUEST = 3,
        DISCONNECTED = 4,
        SENDINGCOMPLETED = 5,
        SENDREQUEST = 6,
    }

    public const int EventIdCount = 7;

    public enum StateId
    {
        ROOT = 0,
        CONNECTED = 1,
        CONNECTEDIDLE = 2,
        SENDING = 3,
        CONNECTING = 4,
        DISCONNECTED = 5,
    }

    public const int StateIdCount = 6;

    // Subtree meta data generation can be disabled in settings.
    // Details: https://github.com/StateSmith/StateSmith/issues/538
    public const int ROOT_SubtreeEndId = 5;  // State 'SyncServer' subtree extends from itself (id: 0) to state 'Disconnected' (id: 5)
    public const int CONNECTED_SubtreeEndId = 3;  // State 'Connected' subtree extends from itself (id: 1) to state 'Sending' (id: 3)
    public const int CONNECTEDIDLE_SubtreeEndId = 2;  // State 'ConnectedIdle' subtree extends from itself (id: 2) to state 'ConnectedIdle' (id: 2)
    public const int SENDING_SubtreeEndId = 3;  // State 'Sending' subtree extends from itself (id: 3) to state 'Sending' (id: 3)
    public const int CONNECTING_SubtreeEndId = 4;  // State 'Connecting' subtree extends from itself (id: 4) to state 'Connecting' (id: 4)
    public const int DISCONNECTED_SubtreeEndId = 5;  // State 'Disconnected' subtree extends from itself (id: 5) to state 'Disconnected' (id: 5)

    // Used internally by state machine. Feel free to inspect, but don't modify.
    public StateId stateId;

    // State machine constructor. Must be called before start or dispatch event functions. Not thread safe.
    public SyncServer()
    {
    }

    // Starts the state machine. Must be called before dispatching events. Not thread safe.
    public void Start()
    {
        ROOT_enter();
        // ROOT behavior
        // uml: TransitionTo(ROOT.<InitialState>)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition). Already at LCA, no exiting required.

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `ROOT.<InitialState>`.
            // ROOT.<InitialState> is a pseudo state and cannot have an `enter` trigger.

            // ROOT.<InitialState> behavior
            // uml: TransitionTo(Disconnected)
            {
                // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition). Already at LCA, no exiting required.

                // Step 2: Transition action: ``.

                // Step 3: Enter/move towards transition target `Disconnected`.
                DISCONNECTED_enter();

                // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
                return;
            } // end of behavior for ROOT.<InitialState>
        } // end of behavior for ROOT
    }

    // Dispatches an event to the state machine. Not thread safe.
    // Note! This function assumes that the `eventId` parameter is valid.
    public void DispatchEvent(EventId eventId)
    {
        switch (this.stateId)
        {
            // STATE: SyncServer
            case StateId.ROOT:
                // No events handled by this state (or its ancestors).
                break;

            // STATE: Connected
            case StateId.CONNECTED:
                switch (eventId)
                {
                    case EventId.DISCONNECTED: CONNECTED_disconnected(); break;
                }
                break;

            // STATE: ConnectedIdle
            case StateId.CONNECTEDIDLE:
                switch (eventId)
                {
                    case EventId.SENDREQUEST: CONNECTEDIDLE_sendrequest(); break;
                    case EventId.DISCONNECTED: CONNECTED_disconnected(); break; // First ancestor handler for this event
                }
                break;

            // STATE: Sending
            case StateId.SENDING:
                switch (eventId)
                {
                    case EventId.SENDINGCOMPLETED: SENDING_sendingcompleted(); break;
                    case EventId.DISCONNECTED: CONNECTED_disconnected(); break; // First ancestor handler for this event
                }
                break;

            // STATE: Connecting
            case StateId.CONNECTING:
                switch (eventId)
                {
                    case EventId.CONNECTIONFAILED: CONNECTING_connectionfailed(); break;
                    case EventId.CONNECTIONCANCELED: CONNECTING_connectioncanceled(); break;
                    case EventId.CONNECTIONSUCCEEDED: CONNECTING_connectionsucceeded(); break;
                }
                break;

            // STATE: Disconnected
            case StateId.DISCONNECTED:
                switch (eventId)
                {
                    case EventId.CONNECTREQUEST: DISCONNECTED_connectrequest(); break;
                }
                break;
        }

    }

    // This function is used when StateSmith doesn't know what the active leaf state is at
    // compile time due to sub states or when multiple states need to be exited.
    private void ExitUpToStateHandler(StateId desiredState)
    {
        while (this.stateId != desiredState)
        {
            switch (this.stateId)
            {
                case StateId.CONNECTED: CONNECTED_exit(); break;

                case StateId.CONNECTEDIDLE: CONNECTEDIDLE_exit(); break;

                case StateId.SENDING: SENDING_exit(); break;

                case StateId.CONNECTING: CONNECTING_exit(); break;

                case StateId.DISCONNECTED: DISCONNECTED_exit(); break;

                default: return;  // Just to be safe. Prevents infinite loop if state ID memory is somehow corrupted.
            }
        }
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state ROOT
    ////////////////////////////////////////////////////////////////////////////////

    private void ROOT_enter()
    {
        this.stateId = StateId.ROOT;
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state CONNECTED
    ////////////////////////////////////////////////////////////////////////////////

    private void CONNECTED_enter()
    {
        this.stateId = StateId.CONNECTED;
    }

    private void CONNECTED_exit()
    {
        // Connected behavior
        // uml: exit / { OnConnectedExit(); }
        {
            // Step 1: execute action `OnConnectedExit();`
            OnConnectedExit();
        } // end of behavior for Connected

        // Connected behavior
        // uml: exit
        {
            // Step 1: execute action ``
        } // end of behavior for Connected

        this.stateId = StateId.ROOT;
    }

    private void CONNECTED_disconnected()
    {
        // Connected behavior
        // uml: Disconnected TransitionTo(Disconnected)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            ExitUpToStateHandler(StateId.ROOT);

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `Disconnected`.
            DISCONNECTED_enter();

            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for Connected

        // No ancestor handles this event.
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state CONNECTEDIDLE
    ////////////////////////////////////////////////////////////////////////////////

    private void CONNECTEDIDLE_enter()
    {
        this.stateId = StateId.CONNECTEDIDLE;
    }

    private void CONNECTEDIDLE_exit()
    {
        this.stateId = StateId.CONNECTED;
    }

    private void CONNECTEDIDLE_sendrequest()
    {
        // ConnectedIdle behavior
        // uml: SendRequest TransitionTo(Sending)
        {
            // Step 1: Exit states until we reach `Connected` state (Least Common Ancestor for transition).
            CONNECTEDIDLE_exit();

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `Sending`.
            SENDING_enter();

            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for ConnectedIdle

        // No ancestor handles this event.
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state SENDING
    ////////////////////////////////////////////////////////////////////////////////

    private void SENDING_enter()
    {
        this.stateId = StateId.SENDING;

        // Sending behavior
        // uml: enter / { OnSendingEnter(); }
        {
            // Step 1: execute action `OnSendingEnter();`
            OnSendingEnter();
        } // end of behavior for Sending

        // Sending behavior
        // uml: enter
        {
            // Step 1: execute action ``
        } // end of behavior for Sending
    }

    private void SENDING_exit()
    {
        this.stateId = StateId.CONNECTED;
    }

    private void SENDING_sendingcompleted()
    {
        // Sending behavior
        // uml: SendingCompleted TransitionTo(ConnectedIdle)
        {
            // Step 1: Exit states until we reach `Connected` state (Least Common Ancestor for transition).
            SENDING_exit();

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `ConnectedIdle`.
            CONNECTEDIDLE_enter();

            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for Sending

        // No ancestor handles this event.
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state CONNECTING
    ////////////////////////////////////////////////////////////////////////////////

    private void CONNECTING_enter()
    {
        this.stateId = StateId.CONNECTING;

        // Connecting behavior
        // uml: enter / { OnConnectingEnter(); }
        {
            // Step 1: execute action `OnConnectingEnter();`
            OnConnectingEnter();
        } // end of behavior for Connecting

        // Connecting behavior
        // uml: enter
        {
            // Step 1: execute action ``
        } // end of behavior for Connecting
    }

    private void CONNECTING_exit()
    {
        // Connecting behavior
        // uml: exit
        {
            // Step 1: execute action ``
        } // end of behavior for Connecting

        this.stateId = StateId.ROOT;
    }

    private void CONNECTING_connectioncanceled()
    {
        // Connecting behavior
        // uml: ConnectionCanceled TransitionTo(Disconnected)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            CONNECTING_exit();

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `Disconnected`.
            DISCONNECTED_enter();

            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for Connecting

        // No ancestor handles this event.
    }

    private void CONNECTING_connectionfailed()
    {
        // Connecting behavior
        // uml: ConnectionFailed TransitionTo(Disconnected)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            CONNECTING_exit();

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `Disconnected`.
            DISCONNECTED_enter();

            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for Connecting

        // No ancestor handles this event.
    }

    private void CONNECTING_connectionsucceeded()
    {
        // Connecting behavior
        // uml: ConnectionSucceeded TransitionTo(Connected)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            CONNECTING_exit();

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `Connected`.
            CONNECTED_enter();

            // Connected.<InitialState> behavior
            // uml: TransitionTo(ConnectedIdle)
            {
                // Step 1: Exit states until we reach `Connected` state (Least Common Ancestor for transition). Already at LCA, no exiting required.

                // Step 2: Transition action: ``.

                // Step 3: Enter/move towards transition target `ConnectedIdle`.
                CONNECTEDIDLE_enter();

                // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
                return;
            } // end of behavior for Connected.<InitialState>
        } // end of behavior for Connecting

        // No ancestor handles this event.
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state DISCONNECTED
    ////////////////////////////////////////////////////////////////////////////////

    private void DISCONNECTED_enter()
    {
        this.stateId = StateId.DISCONNECTED;
    }

    private void DISCONNECTED_exit()
    {
        this.stateId = StateId.ROOT;
    }

    private void DISCONNECTED_connectrequest()
    {
        // Disconnected behavior
        // uml: ConnectRequest TransitionTo(Connecting)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            DISCONNECTED_exit();

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `Connecting`.
            CONNECTING_enter();

            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for Disconnected

        // No ancestor handles this event.
    }

    // Thread safe. This function can be disabled with `outputStateIdToStringFunction` setting.
    public static string StateIdToString(StateId id)
    {
        switch (id)
        {
            case StateId.ROOT: return "ROOT";
            case StateId.CONNECTED: return "CONNECTED";
            case StateId.CONNECTEDIDLE: return "CONNECTEDIDLE";
            case StateId.SENDING: return "SENDING";
            case StateId.CONNECTING: return "CONNECTING";
            case StateId.DISCONNECTED: return "DISCONNECTED";
            default: return "?";
        }
    }

    // Thread safe. This function can be disabled with `outputEventIdToStringFunction` setting.
    public static string EventIdToString(EventId id)
    {
        switch (id)
        {
            case EventId.CONNECTIONCANCELED: return "CONNECTIONCANCELED";
            case EventId.CONNECTIONFAILED: return "CONNECTIONFAILED";
            case EventId.CONNECTIONSUCCEEDED: return "CONNECTIONSUCCEEDED";
            case EventId.CONNECTREQUEST: return "CONNECTREQUEST";
            case EventId.DISCONNECTED: return "DISCONNECTED";
            case EventId.SENDINGCOMPLETED: return "SENDINGCOMPLETED";
            case EventId.SENDREQUEST: return "SENDREQUEST";
            default: return "?";
        }
    }

    // Returns the parent state for a given state. Returns ROOT if input has no parent.
    // Thread safe. This function can be disabled with `outputGetParentIdFunction` setting.
    public static StateId GetParentId(StateId id)
    {
        switch (id)
        {
            case StateId.ROOT: return StateId.ROOT;
            case StateId.CONNECTED: return StateId.ROOT;
            case StateId.CONNECTEDIDLE: return StateId.CONNECTED;
            case StateId.SENDING: return StateId.CONNECTED;
            case StateId.CONNECTING: return StateId.ROOT;
            case StateId.DISCONNECTED: return StateId.ROOT;
            default: return StateId.ROOT;
        }
    }
}
